# interactive-brokers-web-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
ib_gateway/: conf.yaml
ib_rest_api/: app.py
ib_rest_api/templates/: contract.html  dashboard.html  layout.html  lookup.html  orders.html  portfolio.html  scanner.html
tests/: test_routes.py
